# serde-owned

./: Cargo.toml  README.md
serde-owned/: Cargo.toml
serde-owned-derive/: Cargo.toml
serde-owned-derive/src/: lib.rs
serde-owned-derive/tests/: serde.rs
serde-owned/src/: lib.rs
