[package]
name = "serde-owned-derive"
version = "0.1.0"
authors = ["jean-airoldie <25088801+jean-airoldie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"

[dev-dependencies]
serde-owned = { path = "../serde-owned" }
serde_json = "1.0"

[lib]
proc-macro = true
