[package]
name = "serde-owned"
version = "0.0.1"
authors = ["jean-airoldie <25088801+jean-airoldie@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
serde-owned-derive = { path = "../serde-owned-derive", optional = true }

[features]
derive = ["serde-owned-derive"]
